final-devops-project/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
  namespace: devops-final
spec:
  selector: {app: devops-app}
  ports: [{name: http, port: 80, targetPort: http}]
